# Diplom

./: .gitignore  CMakeLists.txt  go.mod  go.sum  vcpkg.json
.github/workflows/: go-pr-checks.yml  release.yml
app/: pubspec.yaml
app/lib/: main.dart
app/lib/src/: grid.dart  grpc_singleton.dart
cmd/diplom/: main.go
compute/: compute.go  compute_bench_test.go  compute_example_test.go  compute_test.go  helper_types.go  vector_value.go
deploy/: envoy.yaml
deploy/docker/: Dockerfile  Dockerfile.web
deploy/docker-compose/: docker-compose.yml  prometheus.yml
deploy/docker-compose/grafana/dashboards/: grid_server.json
deploy/docker-compose/grafana/provisioning/dashboards/: dashboards.yml
deploy/nginx/: nginx.conf
examples/: CMakeLists.txt  basics.cpp  examples.cpp
go/: go.mod
go/cmd/diplom/: main.go
go/compute/: compute.go  compute_bench_test.go  compute_test.go  vector_value.go
go/internal/server/: server.go
go/proto/: grid.pb.go  grid_grpc.pb.go
gridProto/: grid.pb.go  grid_grpc.pb.go
internal/server/: server.go
lib/: CMakeLists.txt  Compute.cppm  function_traits.cppm  helper_types.cppm  vector_value.cppm
proto/: grid.proto
scripts/ci/: compare_benchmarks.py  enforce_benchmark_gate.py
server/: CMakeLists.txt  main_api.cpp  server.cppm
test/: CMakeLists.txt  main.cpp
util/: CMakeLists.txt  util.cppm
